--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "contentful": "^9.3.3",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "framer-motion": "^10.10.0",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
